# bluesync

./: .gitignore  Cargo.toml  README.md  needsfixing.md
debian/: .gitignore  changelog  control  copyright  postinst  postrm  prerm  rules  soundsync.install
docs/: audio-routing-nuances.md  clean-install-runbook.md  implementation-research-plan.md  input.md  installer-readiness.md  tobefixed-implementation-plan.md  tobefixed.md
packaging/: README.md  install.sh  soundsync-cod-watch.sh  uninstall.sh
packaging/default/: soundsync
packaging/systemd/: soundsync-adapter-cod.service  soundsync-adapter.service  soundsync.service
src/: adapter_id.rs  artwork.rs  cli.rs  config.rs  config_store.rs  daemon.rs  doctor.rs  install.rs  lib.rs  main.rs  state.rs
src/audio/: capture.rs  eq_controller.rs  filter_chain.rs  frame.rs  mod.rs  opus_encoder.rs  spectrum.rs
src/bluetooth/: adapter.rs  addr.rs  agent.rs  audio_node.rs  avrcp.rs  bluer_agent.rs  bluer_control.rs  bluer_devices.rs  control.rs  device.rs  devices.rs  events.rs  manager.rs  media.rs  mod.rs  name_config.rs  pairing.rs  service.rs  testing.rs
src/capabilities/: mod.rs  osrelease.rs  probe.rs  version.rs
src/cast/: client.rs  messages.rs  mod.rs  proto.rs
src/dsp/: eq.rs
src/output/: controller.rs  discovery.rs  loopback.rs  mod.rs
src/sys/: command.rs  fs.rs  mod.rs  process.rs  supervisor.rs  testing.rs
src/web/: admin.rs  bt_cmd.rs  eq.rs  media.rs  mod.rs  output.rs  pairing.rs  server.rs  settings.rs  (+2 more)
webui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+46 files in other folders)
